<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
       android:layout_above="@+id/tv_payment_completed"
        android:src="@drawable/ic_soap_bubbles"
        android:layout_height="wrap_content"></ImageView>
    <TextView
        android:id="@+id/tv_payment_completed"
        android:layout_width="wrap_content"
        android:text="@string/payment_completed"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_payment_success"
        android:layout_width="wrap_content"
        android:text="@string/payment_sucess"
        android:gravity="center"
        android:layout_below="@+id/tv_payment_completed"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPayByCard"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        fontPath="fonts/Play-Regular.ttf"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_30sdp"
android:layout_below="@+id/tv_payment_success"
        android:background="@drawable/background_round_treegreen_right"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>